--- a/examples/fsdr/region2.yaml
+++ b/examples/fsdr/region2.yaml
@@ -5,48 +5,39 @@
 #################
 # Region2 Setup #
 #################
-compartment_id: "ocid1.compartment.oc1..xxxx # update dr compartment id
+compartment_id: ocid1.compartment.oc1..cccc # update dr compartment id
 protection_group_display_name: "app-phx"
 log_location:
   bucket: "drpg-logs-phx" # create and update the bucket name
-  namespace: "xxxx" # update the bucket namespace
+  namespace: "zzzz" # update the bucket namespace
 disassociate_trigger: null
-add_members: 
-    - autonomous_database_standby_type_for_dr_drills: "REFRESHABLE_CLONE"
-      member_id: "ocid1.autonomousdatabase.oc1.phx.yyyy" # update the atp db ocid
-      member_type: "AUTONOMOUS_DATABASE"
-    - member_id: "ocid1.cluster.oc1.phx.yyyy"  # update the oke ocid
-      member_type: "OKE_CLUSTER"
-      peer_cluster_id: "ocid1.cluster.oc1.iad.xxxx" # update the peer oke ocid
-      backup_location:
-        bucket: "oke-backup-phx" # update the bucket name
-        namespace: "xxxx" # update the bucket namespace
-      backup_config:
-        backup_schedule: "FREQ=HOURLY;BYHOUR=0;BYMINUTE=0;INTERVAL=1"
-        exclude_namespaces: []
-        image_replication_vault_secret_id: null
-        max_number_of_backups_retained: 3
-        namespaces: ["ns1", "ns2"] # update the list of kubernetes namespace
-        replicate_images: "ENABLE"
-remove_members: []
-dr_plan_and_execution:
-- plan_display_name: SWITCHOVER-TO-PHOENIX
-  type: SWITCHOVER
-  refresh_trigger: null
-  verify_trigger:  null
-  plan_execution: 
-    - execution_display_name: SWITCHOVER-1
-      plan_execution_type: SWITCHOVER
-      timeouts_create: 120m
+add_members: []
+    # - autonomous_database_standby_type_for_dr_drills: "REFRESHABLE_CLONE"
+    #   member_id: "ocid1.autonomousdatabase.oc1.phx.yyyy" # update the atp db ocid
+    #   member_type: "AUTONOMOUS_DATABASE"
+    # - member_id: "ocid1.cluster.oc1.phx.yyyy"  # update the oke ocid
+    #   member_type: "OKE_CLUSTER"
+    #   peer_cluster_id: "ocid1.cluster.oc1.iad.xxxx" # update the peer oke ocid
+    #   backup_location:
+    #     bucket: "oke-backup-phx" # update the bucket name
+    #     namespace: "zzzz" # update the bucket namespace
+    #   backup_config:
+    #     backup_schedule: "FREQ=HOURLY;BYHOUR=0;BYMINUTE=0;INTERVAL=1"
+    #     exclude_namespaces: []
+    #     image_replication_vault_secret_id: null
+    #     max_number_of_backups_retained: 3
+    #     namespaces: ["nginx"] # update the list of kubernetes namespace
+    #     replicate_images: "ENABLE"
+dr_plan_and_execution: 
+# - plan_display_name: SWITCHOVER-TO-PHOENIX
+#   type: SWITCHOVER
+#   refresh_trigger: null
+#   verify_trigger: null  
+#   plan_execution:
 #   - execution_display_name: SWITCHOVER-1-PRECHECK
 #     plan_execution_type: SWITCHOVER_PRECHECK
 #     timeouts_create: 60m
 #     are_prechecks_enabled: false
-# - plan_display_name: STARTDRILL-IN-PHOENIX
-#   type: START_DRILL
-#   refresh_trigger: null 
-#   verify_trigger: null
-#   plan_execution: []
-
-
-
+#   - execution_display_name: SWITCHOVER-1
+#     plan_execution_type: SWITCHOVER
+#     timeouts_create: 120m
